--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: bitsanid
+title: Bitsan ID
 subtitle: Bitcoin Indonesia
 description: Bitcoin Dan Crypto Indonesia
-keywords: null
+keywords: Bitcoin, Ethereum, Dapps, DeFi , NFT
 author: Bitsan ID
 language: zh
 timezone: Etc/GMT+7
